--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,6 +7,6 @@
   <label>Post description:</label><br>
   <%= text_area_tag :'post[description]' %> <br>
   <%= submit_tag "Submit Post" %>
-</form>
+<% end %>
 
 <%= params.inspect %>
